@@ -6,11 +6,12 @@ v1.4 beta 4
 - Made RAM disk creation code more robust by scanning the output from hdiutil for the correct mount point (rather than assumimg /Volumes/ramdisk)
 - Synchronized SSH version and installation with version installed by Installer.app.  This makes it compatible with Boss Prefs.app and Services.app
 - Added new dialog for SSH removal which allows people to choose which shared files to remove
-- Added a 3rd reboot to SSH installation so that chmod isn't being run perpetually (chewing up some battery life).  Yes, I should have done this a long time ago. :)
+- Added a 3rd reboot to SSH installation so that chmod isn't being run perpetually after installing SSH (chewing up some battery life).  Yes, I should have done this a long time ago... :)
 - Fixed a bug with wallpaper uploading where thumbnail file would be the same as the main file no matter what
-- Disabled addition of wallpaper to user folder in Customize tab since it doesn't work
+- Disabled addition of wallpaper to user folder in Customize tab when using firmware 1.1.3 or 1.1.4 since it doesn't work
 - Added failure checking for SIM unlock
 - Added my own tool (optivate) for patching all versions of lockdownd from the RAM disk
+- Disabled SIM unlock button when using firmware 1.1.4
 
 
 v1.4 beta 3 - 02/22/08
